Fix layout issues with FileTextMode, Issue #413

--- a/themes/default/fileext_textmode/screen.css
+++ b/themes/default/fileext_textmode/screen.css
@@ -4,6 +4,12 @@
 	height: 300px;
 	width: 100%;
     border-bottom: 1px solid #454445;
+    overflow: hidden;
+}
+
+#FileExtModeHeader {
+    margin-top: 10px;
+    border-bottom: 2px solid #1a1a1a;
 }
 
 #FileExtTextModeDiv table{
@@ -11,33 +17,6 @@
 	display: block;
 	height: 280px;
 	margin-top: 0px;
-}
-
-#FileExtTextModeDiv thead th{
-	vertical-align: middle;
-	width: 186px;
-	padding-left: 8px;
-	padding-right: 8px;
-}
-
-#FileExtTextModeDiv thead:after {
-    content: "";
-    width: 98%;
-    height: 1px;
-    margin-top: -1px;
-    margin-left: 0;
-    display: block;
-    position: absolute;
-    left: 1%;
-    z-index: -1;
-    -webkit-box-shadow: 0px 0px 8px 2px #000000;
-       -moz-box-shadow: 0px 0px 8px 2px #000000;
-            box-shadow: 0px 0px 8px 2px #000000;
-}
-
-#FileExtTextModeDiv thead{
-	position: fixed;
-	height: 30px;
 }
 
 #FileExtTextModeDiv tbody td.firstLine{
